# CS529-PT2

./: .gitignore  README.md  app.py  mcp_business_server.py  pyproject.toml  requirements.txt
data/: init_db.py  serviceflow.db
data/uploads/users/1/: company_profile.json
knowledge/: company_profile.json  customer_history.json  job_complexity.json  risk_flags.json  schedule_capacity.json  service_catalogue.json  staffing_availability.json
pages/: auth.py  dashboard.py  quote.py
src/serviceflow_ai/: auth.py  crew.py  doc_manager.py  document_processor.py  guardrails.py  main.py  models.py  user_context.py  workflow.py
src/serviceflow_ai/config/: agents.yaml  tasks.yaml
src/serviceflow_ai/tools/: _guardrails.py  business_context_tools.py  customer_tools.py  email_tools.py  operations_tools.py  pricing_tools.py  tool_utils.py
