[project]
name = "serviceflow_ai"
version = "0.1.0"
description = "serviceflow_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
serviceflow_ai = "serviceflow_ai.main:run"
run_crew = "serviceflow_ai.main:run"
train = "serviceflow_ai.main:train"
replay = "serviceflow_ai.main:replay"
test = "serviceflow_ai.main:test"
run_with_trigger = "serviceflow_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
